Improve accessibility across site

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,13 @@
   </div>
 
   <div id="address-fields" style="display: none;">
+    <label for="line1">Address line 1</label>
     <input id="line1" readonly placeholder="Address line 1" />
+    <label for="line2">Address line 2</label>
     <input id="line2" readonly placeholder="Address line 2" />
+    <label for="town">Town</label>
     <input id="town" readonly placeholder="Town" />
+    <label for="county">County</label>
     <input id="county" readonly placeholder="County" />
   </div>
 
